--- a/index.html
+++ b/index.html
@@ -60,97 +60,93 @@
       </div>
     </header>
     <main>
-      <div class="main-title-section">
-        <h1 class="main-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button class="main-button" type="button" data-modal-open>
+      <div class="main-title">
+        <h1 class="main-title__heading">
+          EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+        </h1>
+        <button class="main-title__button" type="button" data-modal-open>
           Zamów usługę
         </button>
       </div>
-      <div class="main-section">
-        <div class="container">
-          <ul class="main-list">
-            <li class="main-list-item">
-              <div class="main-list-background">
-                <svg width="70px" height="70px">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </div>
-              <span class="list-title">Lorem ipsum</span> Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </li>
-            <li class="main-list-item">
-              <div class="main-list-background">
-                <svg width="70px" height="70px">
-                  <use href="./images/icons.svg#icon-clock"></use>
-                </svg>
-              </div>
-              <span class="list-title">Lorem ipsum</span> Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </li>
-            <li class="main-list-item">
-              <div class="main-list-background">
-                <svg width="70px" height="70px">
-                  <use href="./images/icons.svg#icon-diagram"></use>
-                </svg>
-              </div>
-              <span class="list-title">Lorem ipsum</span> Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </li>
-            <li class="main-list-item">
-              <div class="main-list-background">
-                <svg width="70px" height="70px">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </div>
-              <span class="list-title">Lorem ipsum</span> Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </li>
-          </ul>
-          <h2 class="secondary-title">Czym się zajmujemy</h2>
-          <ul class="description-list">
-            <li class="description-list-item">
-              <img
-                src="./images/things1.jpg"
-                alt="Someone typing code on a
+      <div class="section">
+        <ul class="main-list">
+          <li class="main-list__element">
+            <div class="main-list__image">
+              <svg width="70px" height="70px">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
+            <span class="main-list__heading">Lorem ipsum</span> Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li class="main-list__element">
+            <div class="main-list__image">
+              <svg width="70px" height="70px">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
+            <span class="main-list__heading">Lorem ipsum</span> Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li class="main-list__element">
+            <div class="main-list__image">
+              <svg width="70px" height="70px">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
+            <span class="main-list__heading">Lorem ipsum</span> Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li class="main-list__element">
+            <div class="main-list__image">
+              <svg width="70px" height="70px">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
+            <span class="main-list__heading">Lorem ipsum</span> Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed
+            non sodales dui. Interdum et malesuada
+          </li>
+        </ul>
+        <h2 class="title">Czym się zajmujemy</h2>
+        <ul class="specialities">
+          <li class="specialities__element">
+            <img
+              src="./images/things1.jpg"
+              alt="Someone typing code on a
           keyboard"
-                height="294"
-                width="370"
-              />
-              <div class="description-list-item-overlay">
-                Aplikacje komputerowe
-              </div>
-            </li>
-            <li class="description-list-item">
-              <img
-                src="./images/things2.jpg"
-                alt="Someone connecting phone and laptop through wireless connection"
-                height="294"
-                width="370"
-              />
-              <div class="description-list-item-overlay">Aplikacje mobilne</div>
-            </li>
-            <li class="description-list-item">
-              <img
-                src="./images/things3.jpg"
-                alt="Someone looking at a palette of colors on a tablet"
-                height="294"
-                width="370"
-              />
-              <div class="description-list-item-overlay">
-                Rozwiązania graficzne
-              </div>
-            </li>
-          </ul>
-        </div>
+              height="294"
+              width="370"
+            />
+            <div class="specialities__overlay">Aplikacje komputerowe</div>
+          </li>
+          <li class="specialities__element">
+            <img
+              src="./images/things2.jpg"
+              alt="Someone connecting phone and laptop through wireless connection"
+              height="294"
+              width="370"
+            />
+            <div class="specialities__overlay">Aplikacje mobilne</div>
+          </li>
+          <li class="specialities__element">
+            <img
+              src="./images/things3.jpg"
+              alt="Someone looking at a palette of colors on a tablet"
+              height="294"
+              width="370"
+            />
+            <div class="specialities__overlay">Rozwiązania graficzne</div>
+          </li>
+        </ul>
       </div>
-      <div class="team-section">
-        <h2 class="secondary-title">Nasz zespół</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
+      <div class="team">
+        <h2 class="title">Nasz zespół</h2>
+        <ul class="team__list">
+          <li class="team__element">
             <figure>
               <img
                 src="./images/team1.jpg"
@@ -159,34 +155,34 @@
                 width="270"
               />
               <figcaption>
-                <p class="name">John Doe</p>
-                <p class="occupation">Product Designer</p>
+                <p class="team__name">John Doe</p>
+                <p class="team__occupation">Product Designer</p>
               </figcaption>
             </figure>
-            <ul class="team-icons-list">
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+            <ul class="team__social">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
           </li>
-          <li class="team-list-item">
+          <li class="team__element">
             <figure>
               <img
                 src="./images/team2.jpg"
@@ -195,34 +191,34 @@
                 width="270"
               />
               <figcaption>
-                <p class="name">John Doe</p>
-                <p class="occupation">Frontend Designer</p>
+                <p class="team__name">John Doe</p>
+                <p class="team__occupation">Frontend Designer</p>
               </figcaption>
             </figure>
-            <ul class="team-icons-list">
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+            <ul class="team__social">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
           </li>
-          <li class="team-list-item">
+          <li class="team__element">
             <figure>
               <img
                 src="./images/team3.jpg"
@@ -231,34 +227,34 @@
                 width="270"
               />
               <figcaption>
-                <p class="name">John Doe</p>
-                <p class="occupation">Marketing</p>
+                <p class="team__name">John Doe</p>
+                <p class="team__occupation">Marketing</p>
               </figcaption>
             </figure>
-            <ul class="team-icons-list">
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+            <ul class="team__social">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
           </li>
-          <li class="team-list-item">
+          <li class="team__element">
             <figure>
               <img
                 src="./images/team4.jpg"
@@ -267,28 +263,28 @@
                 width="270"
               />
               <figcaption>
-                <p class="name">John Doe</p>
-                <p class="occupation">UI Designer</p>
+                <p class="team__name">John Doe</p>
+                <p class="team__occupation">UI Designer</p>
               </figcaption>
             </figure>
-            <ul class="team-icons-list">
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+            <ul class="team__social">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </li>
-              <li class="team-icons-list-item">
-                <svg class="team-icon" width="44px" height="44px">
+              <li class="social-media">
+                <svg class="social-media__icon" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </li>
@@ -297,7 +293,7 @@
         </ul>
       </div>
       <div class="client-section">
-        <h2 class="secondary-title">Nasi klienci</h2>
+        <h2 class="title">Nasi klienci</h2>
         <ul class="client-list">
           <li class="client-list-item">
             <svg class="client-icon" width="106px" height="60px">
@@ -332,12 +328,12 @@
         </ul>
       </div>
     </main>
-    <footer id="contact">
+    <footer class="page-footer" id="contact">
       <div class="footer-contact-section">
         <a class="logo logo--white" href="./index.html"
           ><span class="logo__color">Web</span>Studio</a
         >
-        <address>
+        <address class="address">
           <p>m. Warszawa, Aleje Jerozolimskie 21</p>
           <p>
             <a class="footer-contact" href="mailto:info@example.com"
@@ -354,23 +350,23 @@
       <div class="footer-social-media-section">
         <p class="footer-social-media-title">Dołącz do nas</p>
         <ul class="footer-social-media-list">
-          <li class="footer-social-media-list-item">
-            <svg class="footer-icon" width="44px" height="44px">
+          <li class="social-media social-media--footer">
+            <svg class="social-media__icon" width="44px" height="44px">
               <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </li>
-          <li class="footer-social-media-list-item">
-            <svg class="footer-icon" width="44px" height="44px">
+          <li class="social-media social-media--footer">
+            <svg class="social-media__icon" width="44px" height="44px">
               <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </li>
-          <li class="footer-social-media-list-item">
-            <svg class="footer-icon" width="44px" height="44px">
+          <li class="social-media social-media--footer">
+            <svg class="social-media__icon" width="44px" height="44px">
               <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </li>
-          <li class="footer-social-media-list-item">
-            <svg class="footer-icon" width="44px" height="44px">
+          <li class="social-media social-media--footer">
+            <svg class="social-media__icon" width="44px" height="44px">
               <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </li>
