Finished BEM refactorization

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./sass/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>goit-markup-hw-07</title>
   </head>
   <body class="container">
@@ -151,7 +151,7 @@
         <h2 class="title">Nasz zespół</h2>
         <ul class="team__list">
           <li class="team__element">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/team1.jpg"
                 alt="A man in a dark unbuttoned shirt with glasses and beard smiling"
@@ -187,7 +187,7 @@
             </ul>
           </li>
           <li class="team__element">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/team2.jpg"
                 alt="A woman with glasses smiling"
@@ -223,7 +223,7 @@
             </ul>
           </li>
           <li class="team__element">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/team3.jpg"
                 alt="A man in a light shirt with beard smiling"
@@ -259,7 +259,7 @@
             </ul>
           </li>
           <li class="team__element">
-            <figure>
+            <figure class="figure">
               <img
                 src="./images/team4.jpg"
                 alt="A man in a black T-shirt with glasses and beard smirking"
@@ -464,7 +464,7 @@
               </svg>
             </label>
           </div>
-          <button type="submit" class="modal__submit">Wyślij</button>
+          <button type="submit" class="modal__submit-button">Wyślij</button>
         </form>
       </div>
     </div>
