--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./sass/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>goit-markup-hw-07</title>
   </head>
   <body class="container">
@@ -81,7 +81,7 @@
       </ul>
       <ul class="project-list">
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio1.jpg"
@@ -106,7 +106,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio2.jpg"
@@ -132,7 +132,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio3.jpg"
@@ -156,7 +156,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio4.jpg"
@@ -180,7 +180,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio5.jpg"
@@ -204,7 +204,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio6.jpg"
@@ -228,7 +228,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio7.jpg"
@@ -252,7 +252,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio8.jpg"
@@ -276,7 +276,7 @@
           </figure>
         </li>
         <li class="project-list__element">
-          <figure>
+          <figure class="figure">
             <div class="project-list__image">
               <img
                 src="./images/portfolio9.jpg"
