--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>goit-markup-hw-07</title>
+    <title>Agencja</title>
   </head>
   <body class="container">
     <header class="page-header">
